# django-el-pagination

./: .coveragerc  .gitignore  .hgignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .travis.yml  AUTHORS  HACKING  INSTALL  LICENSE  MANIFEST.in  Makefile  PKG-INFO  README.rst  conftest.py  pyproject.toml  release-requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tox.yml
doc/: Makefile  changelog.rst  conf.py  contacts.rst  contributing.rst  current_page_number.rst  customization.rst  different_first_page.rst  digg_pagination.rst  generic_views.rst  index.rst  javascript.rst  lazy_pagination.rst  multiple_pagination.rst  requirements.txt  start.rst  templatetags_reference.rst  thanks.rst  twitter_pagination.rst
doc/_static/: TRACKME
el_pagination/: __init__.py  decorators.py  exceptions.py  loaders.py  models.py  paginators.py  settings.py  utils.py  views.py
el_pagination/locale/de/LC_MESSAGES/: django.mo  django.po
el_pagination/locale/es/LC_MESSAGES/: django.mo  django.po
el_pagination/locale/fr/LC_MESSAGES/: django.mo  django.po
el_pagination/locale/it/LC_MESSAGES/: django.mo  django.po
el_pagination/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
el_pagination/locale/zh_CN/LC_MESSAGES/: django.mo  django.po
el_pagination/static/el-pagination/js/: el-pagination-endless.js  el-pagination.js
el_pagination/static/el_pagination/js/: el_pagination-endless.js  el_pagination_on_scroll.js
el_pagination/templates/el_pagination/: next_link.html  page_link.html  previous_link.html  show_more.html  show_more_table.html
el_pagination/templatetags/: el_pagination_tags.py
el_pagination/tests/: __init__.py  test_decorators.py  test_loaders.py  test_models.py  test_paginators.py  test_utils.py  test_views.py
el_pagination/tests/integration/: __init__.py  test_callbacks.py  test_chunks.py  test_digg.py  test_feed_wrapper.py  test_multiple.py  test_onscroll.py  test_twitter.py
el_pagination/tests/templatetags/: test_el_pagination_tags.py  test_endless.py
tests/: develop.py  manage.py  requirements.pip  settings.py  with_venv.sh
tests/project/: context_processors.py  models.py  settings.py  urls.py  views.py
tests/project/static/: pagination.css
tests/project/templates/: base.html  home.html
tests/project/templates/callbacks/: index.html  page.html
tests/project/templates/chunks/: index.html  items_page.html  objects_page.html
tests/project/templates/complete/: articles_page.html  entries_page.html  index.html  objects_page.html  objects_simple_page.html
tests/project/templates/digg/: index.html  page.html
tests/project/templates/digg/table/: index.html  page.html
tests/project/templates/feed_wrapper/: index.html  page.html
tests/project/templates/multiple/: entries_page.html  index.html  items_page.html  objects_page.html
tests/project/templates/onscroll/: index.html  page.html
tests/project/templates/onscroll/table/: index.html  page.html
tests/project/templates/twitter/: index.html  page.html
tests/project/templates/twitter/table/: index.html  page.html
