[bdist_wheel]
universal = 0

[flake8]
exclude = docs/*,.tox,.git,build,dist
ignore = E123,E128,E402,W503,E731,W601
max-line-length = 119

[isort]
not_skip=__init__.py
atomic=True
multi_line_output=5
include_trailing_comma=True
balanced=True

[coverage:run]
source = el_pagination
omit = */tests/*
branch = True

[metadata]
license_files = LICENSE
